--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,11 @@ ETH_RPC_URL=
 HOLESKY_RPC_URL=
 ETHERSCAN_API_KEY=
 
+# OjoPendleOracle
 PT_ADDRESS=
 BASE_DISCOUNT_PER_YEAR=
+
+# OjoPTOraclePriceAdapter
+PT_ORACLE=
+MARKET=
+DESCRIPTION=
