--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ via_ir = true
 src = "src"
 out = "out"
 libs = ["lib"]
+evm_version = "shanghai"
 fs_permissions = [{ access = "read-write", path = "./"}]
 gas_reports = ["*"]
 build_info = true
